--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,78 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.wrapper{
+    overflow-x: hidden;
+    overflow-y: auto;    
+}
+
+.wrapper h1{
+    margin-top: 30px;
+    text-align: center;
+}
+
+.wrapper p{
+    text-align: center;
+    margin-top: 7px;
+    font-weight: bold;
+}
+
+.wrapper .main{
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+}
+
+.wrapper .form-container{
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    height: 340px;
+    /* background-color: red; */
+    margin: 20px auto;
+    padding: 20px;   
+}
+
+.wrapper .form-container .btn{
+    width: 100%;   
+}
+
+.side-div{
+    background-color: aqua;
+    width: 100% !important;
+    display: flex;
+    flex-direction: center;
+}
+.wrapper .view-container{
+    width: 40%;    
+    background-color: #e4e4e4;
+    margin: 0 auto;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.delete-btn{
+    color: red;
+    cursor: pointer;
+}
+
+tbody{
+    margin-top: 25px;
+}
+
+.paragraphe {
+    background-color: black;
+    color: white;
+    font-weight: normal;
+}
