--- a/src/index.css
+++ b/src/index.css
@@ -84,10 +84,24 @@ h2 {
 }
 
 .side-div{
-    width: 100% !important;
-    display: flex;
-    margin: 20px 0 20px 0;
+    width: 40% !important;
+    margin: 0 auto;
     background-color: rgb(181, 185, 204);
+    padding: 10px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    box-shadow: 1px 1px 7px 1px white;
+}
+
+.subItems {
+    width: 80% !important;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    background-color: red;
     padding: 10px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -144,20 +158,19 @@ h2 {
     font-weight: bold;
     margin-bottom: 5px;
 }
-.wrapper .view-container{
-    width: 30%;
+/* .view-container {
+    width: 60%;
     background-color: rgb(237, 242, 250);
     margin: 0 auto;
     padding: 2%;
     display: flex;
     justify-content: center;
-    flex-direction: column;
     border-radius: 8px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
-}
+} */
 
 .paragraphe {
     color: rgb(71, 94, 146);
